--- a/4. React-Starter-Code/frontend/src/components/Navbar/style.css
+++ b/4. React-Starter-Code/frontend/src/components/Navbar/style.css
@@ -1,8 +1,20 @@
 .navDiv{
     display: flex;
     gap: 40px;
+    display: flex;
+    gap: 40px;
+    /* border-block-color: red; */
+    background-color: #8e91c5;
+    /* color: wheat; */
+    /* height: 50px; */
+    /* justify-items: center;
+    align-items: center; */
+    /* margin-left: 40px; */
+    padding-left: 50px;
 }
 .dasDiv{
     display: flex;
     gap: 40px;
+    
+    /* border-block-color: red; */
 }
