--- a/4. React-Starter-Code/frontend/src/App.css
+++ b/4. React-Starter-Code/frontend/src/App.css
@@ -1,3 +1,14 @@
 .App {
   text-align: center;
+  justify-content: center;
+
+}
+.appinDev{
+  padding-left: 125px;
+  justify-content: center;
+  justify-items:center ;
+}
+h1{
+
+  color: darkblue;
 }
