--- a/4. React-Starter-Code/frontend/src/components/Dashboard/style.css
+++ b/4. React-Starter-Code/frontend/src/components/Dashboard/style.css
@@ -18,9 +18,17 @@
     grid-auto-columns: minmax(200px,auto);
 }
 .buttondash{
+    border: none;
     width: 200px;
     color:  white;
     background-color: darkblue;
+    margin: 10px;
+}
+.btnDelet{
+    border: none;
+    width: 200px;
+    color:  white;
+    background-color: red;
     margin: 10px;
 }
 h3{
